--- a/paper/incl_conclusion.tex
+++ b/paper/incl_conclusion.tex
@@ -3,7 +3,7 @@
 \section{Discussion} 
 
 % \added[id=ALB]{
-    Capturing branch switching phenomena across stability transitions is not an automatic feature of approximate numerical methods. If they rely on approximate information about the Hessian of the energy functional, these methods do not guarantee to systematically detect transitions between critical equilbrium states, when stability is lost. 
+    Capturing branch switching phenomena across stability transitions is not an automatic feature of approximate numerical methods. If they rely on approximate information about the Hessian of the energy functional, these methods do not guarantee to systematically detect transitions between critical equilibrium states, when stability is lost. 
 Indeed, this requires a careful determination of the zero-eigenmodes that render singular the exact nonlinear Hessian, which is typically not available in general purpose first order numerical algorithms.
 In practice, without such information, critical loads for equilibrium transitions become algorithm-dependant and are not consistent with closed-form solutions of the exact evolution problem.
 % }
@@ -23,9 +23,9 @@ We present two main options for discussing these considerations in view of the i
 
 \begin{itemize}
     \item 
-    Ignore the Numerical Artifact: focussing solely on first order considerations and acknowledging that the observed computed nucleations may be purely numerical and should not be considered in physical terms.
+    Ignore the Numerical Artifact: focusing solely on first order considerations and acknowledging that the observed computed nucleations may be purely numerical and should not be considered in physical terms.
     \item 
-    Highlight the Numerical Artifact: Alternatively, emphasising that homogeneous solutions should be observable, despite 
+    Highlight the Numerical Artifact: Alternatively, emphasizing that homogeneous solutions should be observable, despite 
     the sensitivity to numerical parameters (artifacts, in the quasi-Newton approach) and the abundance of admissible solutions (in the nonconvex scenario).
     \item 
     Otherwise.
