--- a/paper/incl_intro.tex
+++ b/paper/incl_intro.tex
@@ -87,16 +87,15 @@ The multiple minima of the functionals and the multitude of equilibrium states a
 % \added[id=ALB]{Thus, whether smooth or sudden, transitions lead the system to a new equilibrium state.}
 At an instability threshold, the system restabilizes in a dissipative manner through a state transition, whether smoothly or suddenly.
 In this quasi-static setting, how does the system choose a new locally stable equilibrium branch with lower energy?
-During an isolated switching event, new equilibrium branches can be determined using a steepest descent or a continuation algorithm. However, XXXX because the energy functionals in our focus are strongly nonlinear, they may lack convexity in their arguments and thus exhibit multiple local minima, or none at all. Consequently, conducting stability and bifurcation analyses becomes crucial to distinguish among the various potential solutions or evolution paths, those that are physically relevant.
+During an isolated switching event, new equilibrium branches can be determined using a steepest descent or a continuation algorithm. However, because the energy functionals in our focus are strongly nonlinear and nonconvex, they typically exhibit multiple local minima (or none at all). Consequently, conducting stability and bifurcation analyses becomes crucial to distinguish among the various potential solutions or evolution paths, those that are physically relevant.
 
-Bifurcation and stability of equilibrium configurations in dynamic systems without constraints has led to a systematic investigation of local blow-up behaviors at bifurcations points in terms of linearised (canonical) representations, allowing for easier classification and analysis of the bifurcation types~\cite{}. 
-For systems of ODEs the criterion  of bifurcation (from a fundamental solution) amounts to the study of the existence of solutions different than the fundamental one in an arbitrary neighborhood of the control parameters. Conditions of failure of the implicit function theorem~\cite{} describe the scenario under which a system of equations can realise more than one smooth solution.
-Less clear is the picture in presence of nonconvexities and nonlinear constraints associated with internal variables, where quasi-static evolutionary problems defined by optimality conditions take the form of variational inequalities defining the trajectories of a system in phase space. In these scenarios, as noted in the seminal work~\cite{hill}, the study of bifurcation and stability is not equivalent to the existence of solutions infinitesimally near critical points in arbitrary neighborhoods of the control parameters.
-BAZANT
+Bifurcation and stability of equilibrium configurations in dynamic systems without constraints has led to a systematic investigation of local blow-up behaviors at bifurcations points in terms of linearised (canonical) representations, allowing for easier classification and analysis of the bifurcation types~\cite{Iooss2012-el}. 
+For systems of ODEs the criterion  of bifurcation (from a fundamental solution) amounts to the study of the existence of solutions different than the fundamental one in an arbitrary neighborhood of the control parameters. Conditions of failure of the implicit function theorem~\cite{Iooss2012-el} describe the scenario under which a system of equations can realise more than one smooth solution.
+Less clear is the picture in presence of nonconvexities and nonlinear constraints associated with internal variables, where quasi-static evolutionary problems defined by optimality conditions take the form of variational inequalities defining the trajectories of a system in phase space. In these scenarios, as noted in the seminal work~\cite{Hill1958-xd}, the study of bifurcation and stability is not equivalent to the existence of solutions infinitesimally near critical points in arbitrary neighborhoods of the control parameters~\cite{Bazant2010-zb}.
 
 In our context, 
 % instead of seeking existence of solutions  (which amounts to the invertibility of equilibrium system), 
-a bifurcation condition along the system's evolution parametrised by the control parameter(s) is associated to the uniqueness of a field of vectors tangent to the trajectory in phase space.
+a bifurcation condition along the system's evolution parametrized by the control parameter(s) is associated to the uniqueness of a field of vectors tangent to the trajectory in phase space.
 % Namely, the critical point is degenerate in that its second derivative is not invertible.
 % (local) failure of the implicit function theorem.
 % For an evolution, 
